[gd_scene load_steps=8 format=3 uid="uid://dopio2pmdmjpx"]

[ext_resource type="Script" path="res://Scenes/game_main_screen.gd" id="1_3ecd0"]
[ext_resource type="PackedScene" uid="uid://bor0f34yh2ofm" path="res://Scenes/GameMainScreenScenes/game_screen.tscn" id="1_8477q"]
[ext_resource type="PackedScene" uid="uid://dy25pvs37m84w" path="res://Scenes/GameMainScreenScenes/fishing_screen.tscn" id="2_17x50"]
[ext_resource type="PackedScene" uid="uid://b5dmw3pfjdkmr" path="res://Scenes/GameMainScreenScenes/text_log.tscn" id="2_ct3t5"]
[ext_resource type="PackedScene" uid="uid://msehiccnr5t8" path="res://Scenes/GameMainScreenScenes/achievement_screen.tscn" id="2_kma5e"]
[ext_resource type="PackedScene" uid="uid://dtv4rjhuhfki5" path="res://Scenes/GameMainScreenScenes/ascension_screen.tscn" id="3_cexxl"]
[ext_resource type="PackedScene" uid="uid://dnnaegnbqppxc" path="res://Scenes/settings.tscn" id="5_tqmh8"]

[node name="GameMainScreen" type="Control" groups=["GameMainScreen"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3ecd0")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.584314, 0.584314, 0.584314, 1)

[node name="Gameplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameScreen" parent="Gameplay" instance=ExtResource("1_8477q")]
layout_mode = 1

[node name="FishingScreen" parent="Gameplay" instance=ExtResource("2_17x50")]
visible = false
layout_mode = 1

[node name="TextLog" parent="Gameplay" instance=ExtResource("2_ct3t5")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_top = -245.0
offset_right = 905.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 0

[node name="AchievementScreen" parent="." instance=ExtResource("2_kma5e")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="AscensionScreen" parent="." instance=ExtResource("3_cexxl")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="SettingsScreen" parent="." instance=ExtResource("5_tqmh8")]
visible = false
layout_mode = 1

[node name="BackgroundButtons" type="Control" parent="." groups=["BackgroundButtons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MenuButtonsVBox" type="VBoxContainer" parent="BackgroundButtons"]
show_behind_parent = true
layout_mode = 2
offset_left = 919.0
offset_top = 780.0
offset_right = 1056.0
offset_bottom = 1051.0
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 2

[node name="AchievementsButton" type="Button" parent="BackgroundButtons/MenuButtonsVBox"]
layout_mode = 2
text = "Achievments"

[node name="AscensionButton" type="Button" parent="BackgroundButtons/MenuButtonsVBox"]
layout_mode = 2
text = "Ascension"

[node name="FishingButton" type="Button" parent="BackgroundButtons/MenuButtonsVBox"]
layout_mode = 2
text = "Fishing"

[node name="HomeButton" type="Button" parent="BackgroundButtons/MenuButtonsVBox"]
layout_mode = 2
text = "Home"

[node name="SettingsButton" type="Button" parent="BackgroundButtons/MenuButtonsVBox"]
layout_mode = 2
text = "Settings"

[node name="GameMainScreenTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="button_down" from="BackgroundButtons/MenuButtonsVBox/AchievementsButton" to="." method="_on_achievements_button_button_down"]
[connection signal="button_down" from="BackgroundButtons/MenuButtonsVBox/AscensionButton" to="." method="_on_ascension_button_button_down"]
[connection signal="button_down" from="BackgroundButtons/MenuButtonsVBox/FishingButton" to="." method="_on_fishing_button_button_down"]
[connection signal="button_down" from="BackgroundButtons/MenuButtonsVBox/HomeButton" to="." method="_on_home_button_button_down"]
[connection signal="button_down" from="BackgroundButtons/MenuButtonsVBox/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="timeout" from="GameMainScreenTimer" to="." method="_on_game_main_screen_timer_timeout"]
